template/admin.html hinzugefügt

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,7 @@
 @import 'imports/colors';
+@import 'imports/sizes';
 @import 'imports/global';
+@import 'imports/tooltips';
+@import 'imports/dropdown';
 @import 'imports/login';
+@import 'imports/webapp';
