--- a/scss/imports/global.scss
+++ b/scss/imports/global.scss
@@ -10,6 +10,11 @@
 html, body{
 	width: 100%;
 	height: 100%;
+	box-sizing: border-box;
+}
+
+a{
+	text-decoration: none;
 }
 
 .right{
@@ -18,4 +23,20 @@ html, body{
 
 .left{
 	float: left;
+}
+
+.transition-300{
+	transition: all 0.3s linear;
+}
+
+hr.broad{
+	width: 100%;
+	height: 10px;
+	margin: 0;
+	background: $main-color;
+	border: none;
+}
+
+.double-width{
+	width: 200%;
 }
