--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 * {
-  font-family: arial; }
+  font-family: arial;
+  outline: none; }
 
 *::selection {
   background: #e542a3;
@@ -31,6 +32,21 @@ hr.broad {
 
 .double-width {
   width: 200%; }
+
+.templates {
+  display: none; }
+
+.width-50 {
+  width: 50% !important; }
+
+.width-100 {
+  width: 50% !important; }
+
+.width-33 {
+  width: 33.33333% !important; }
+
+.width-20 {
+  width: 20% !important; }
 
 a[data-tooltip] {
   position: relative; }
@@ -271,6 +287,7 @@ div.dropdown {
   .webapp .details-pane {
     width: calc(100% - 200px);
     height: calc(100% - 50px);
+    padding: 20px;
     box-sizing: border-box;
     background: #CCC; }
   .webapp .button {
@@ -291,5 +308,69 @@ div.dropdown {
         background: #DDD; }
     .webapp .button:hover {
       background: #682458; }
+  .webapp .inner {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: block;
+    background: #FFF;
+    box-sizing: border-box;
+    box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75);
+    overflow-y: auto; }
+    .webapp .inner h1 {
+      margin: 0;
+      font-size: 30px;
+      font-weight: bold;
+      color: #822D6E; }
+    .webapp .inner form input[type="text"] {
+      width: 100%;
+      height: 40px;
+      margin-top: 20px;
+      font-size: 18px;
+      color: #2d2d2d;
+      padding-left: 8px;
+      border: 1px solid #DDD;
+      box-sizing: border-box;
+      border-radius: 10px;
+      background: #DDD;
+      transition: all 0.3s linear; }
+      .webapp .inner form input[type="text"]:focus {
+        border: 1px solid #822D6E;
+        background: #FFF; }
+    .webapp .inner form input[type="submit"] {
+      width: auto;
+      height: 40px;
+      margin-top: 20px;
+      padding: 0 15px 0 15px;
+      font-size: 18px;
+      color: #CCC;
+      background: #822D6E;
+      box-sizing: border-box;
+      border-radius: 10px;
+      border: none;
+      font-weight: bold;
+      transition: all 0.3s linear; }
+      .webapp .inner form input[type="submit"]:focus {
+        background: #682458;
+        color: #FFF; }
+      .webapp .inner form input[type="submit"]:hover {
+        background: #682458;
+        color: #FFF; }
+    .webapp .inner form textarea {
+      width: 100%;
+      height: 150px;
+      max-width: 100%;
+      margin-top: 20px;
+      font-size: 18px;
+      color: #2d2d2d;
+      padding: 8px;
+      border: 1px solid #DDD;
+      box-sizing: border-box;
+      border-radius: 10px;
+      background: #DDD;
+      transition: all 0.3s linear; }
+      .webapp .inner form textarea:focus {
+        border: 1px solid #822D6E;
+        background: #FFF; }
 
 /*# sourceMappingURL=main.css.map */
