--- a/scss/imports/webapp.scss
+++ b/scss/imports/webapp.scss
@@ -120,6 +120,7 @@
 	.details-pane{
 		width: calc(100% - 200px);
 		height: calc(100% - 50px);
+		padding: 20px;
 		box-sizing: border-box;
 		background: #CCC;
 	}
@@ -130,7 +131,6 @@
 		padding: 5px 8px;
 		display: block;
 		border-radius: 5px;
-		// border: 1px solid $main-color;
 		box-sizing: border-box;
 		background: $main-color;
 		color: $bright-font-color;
@@ -148,6 +148,90 @@
 
 		&:hover{
 			background: $main-color-dark;
+		}
+	}
+
+	.inner{
+		width: 100%;
+		height: 100%;
+		padding: 20px;
+		display: block;
+		background: $flat-color;
+		box-sizing: border-box;
+		box-shadow: 7px 7px 17px -5px rgba(0,0,0,0.75);
+		overflow-y: auto;
+
+		h1{
+			margin: 0;
+			font-size: 30px;
+			font-weight: bold;
+			color: $main-color;
+		}
+
+		form{
+			input[type="text"]{
+				width: 100%;
+				height: 40px;
+				margin-top: 20px;
+				font-size: 18px;
+				color: $form-font-color;
+				padding-left: 8px;
+				border: 1px solid $bright-hover-background-color;
+				box-sizing: border-box;
+				border-radius: 10px;
+				background: $bright-hover-background-color;
+				transition: all 0.3s linear;
+
+				&:focus{
+					border: 1px solid $main-color;
+					background: $flat-color;
+				}
+			}
+
+			input[type="submit"]{
+				width: auto;
+				height: 40px;
+				margin-top: 20px;
+				padding: 0 15px 0 15px;
+				font-size: 18px;
+				color: $bright-font-color;
+				background: $main-color;
+				box-sizing: border-box;
+				border-radius: 10px;
+				border: none;
+				font-weight: bold;
+				transition: all 0.3s linear;
+
+				&:focus{
+					background: $main-color-dark;
+					color: $flat-color;
+				}
+
+				&:hover{
+					background: $main-color-dark;
+					color: $flat-color;
+				}
+			}
+
+			textarea{
+				width: 100%;
+				height: 150px;
+				max-width: 100%;
+				margin-top: 20px;
+				font-size: 18px;
+				color: $form-font-color;
+				padding: 8px;
+				border: 1px solid $bright-hover-background-color;
+				box-sizing: border-box;
+				border-radius: 10px;
+				background: $bright-hover-background-color;
+				transition: all 0.3s linear;
+
+				&:focus{
+					border: 1px solid $main-color;
+					background: $flat-color;
+				}
+			}
 		}
 	}
 }
