--- a/templates/admin.html
+++ b/templates/admin.html
@@ -51,7 +51,22 @@
 				
 			</div>
 		</div>
+
+		<div class="templates">
+
+			<div class="inner new-event">
+				<h1>Neue Veranstaltung</h1>
+
+				<form>
+					<input name="name" type="text" placeholder="Name der Veranstaltung" class="width-50" />
+					<textarea name="description" placeholder="Beschreibung der Veranstaltung"></textarea>
+					<input type="submit" value="Speichern" />
+				</form>
+			</div>
+
+		</div>
+
 		<script src="../js/layout.js"></script>
-		<script src="../js/main.js"></script>
+		<script src="../js/GuiManager.js"></script>
 	</body>
 </html>
