--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
-@import 'imports/colors';
-@import 'imports/sizes';
-@import 'imports/global';
-@import 'imports/tooltips';
-@import 'imports/dropdown';
-@import 'imports/login';
-@import 'imports/webapp';
+@import 'imports/_colors';
+@import 'imports/_sizes';
+@import 'imports/_global';
+@import 'imports/_tooltips';
+@import 'imports/_dropdown';
+@import 'imports/_login';
+@import 'imports/_webapp';
