--- a/templates/Events.html
+++ b/templates/Events.html
@@ -2,7 +2,7 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8">
-		<title>Lehrmittelverwaltung</title>
+		<title>Lerhmittelverwaltung</title>
 		<meta name="description" content="Lerhmittelverwaltung">
 		<link rel="stylesheet" href="../css/normalize.css">
 		<link rel="stylesheet" href="../css/main.css">
@@ -21,7 +21,7 @@
 				<a href="#" class="button bright logout right top-bar-item">Ausloggen</a>
 				<!--span class="username">aerotschkin</span-->
 			</div>
-
+			
 
 			<div class="side-bar left">
 				<hr class="broad" />
@@ -48,7 +48,7 @@
 			</div>
 
 			<div class="details-pane left">
-
+				
 			</div>
 		</div>
 
@@ -61,7 +61,6 @@
 					<input name="name" type="text" placeholder="Name der Veranstaltung" class="width-50" />
 					<textarea name="description" placeholder="Beschreibung der Veranstaltung"></textarea>
 					<input type="submit" value="Speichern" />
-					<input type="button" value="Verwerfen" />
 				</form>
 			</div>
 
