--- a/css/main.css
+++ b/css/main.css
@@ -1,85 +1,115 @@
 * {
   font-family: arial;
-  outline: none; }
+  outline: none;
+}
+
+*::-moz-selection {
+  background: #e542a3;
+  color: #FFF;
+}
 
 *::selection {
   background: #e542a3;
-  color: #FFF; }
+  color: #FFF;
+}
 
 html, body {
   width: 100%;
   height: 100%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .right {
-  float: right; }
+  float: right;
+}
 
 .left {
-  float: left; }
+  float: left;
+}
 
 .transition-300 {
-  transition: all 0.3s linear; }
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
 
 hr.broad {
   width: 100%;
   height: 10px;
   margin: 0;
   background: #822D6E;
-  border: none; }
+  border: none;
+}
 
 .double-width {
-  width: 200%; }
+  width: 200%;
+}
 
 .templates {
-  display: none; }
+  display: none;
+}
 
 .width-50 {
-  width: 50% !important; }
+  width: 50% !important;
+}
 
 .width-100 {
-  width: 50% !important; }
+  width: 50% !important;
+}
 
 .width-33 {
-  width: 33.33333% !important; }
+  width: 33.33333% !important;
+}
 
 .width-20 {
-  width: 20% !important; }
+  width: 20% !important;
+}
+
+.clearer {
+  clear: both;
+  float: none;
+}
 
 a[data-tooltip] {
-  position: relative; }
-  a[data-tooltip]:hover:after {
-    display: block; }
-  a[data-tooltip]:hover:before {
-    display: block; }
-  a[data-tooltip]:before {
-    position: absolute;
-    left: 20px;
-    top: calc(100% + 7px);
-    background-color: #822D6E;
-    color: #FFF;
-    height: 30px;
-    line-height: 30px;
-    border-radius: 5px;
-    padding: 0 10px;
-    content: attr(data-tooltip);
-    white-space: nowrap;
-    font-size: 15px;
-    font-weight: normal;
-    display: none;
-    box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75); }
-  a[data-tooltip]:after {
-    position: absolute;
-    left: 30px;
-    top: calc(100% - 7px);
-    border-top: 7px solid transparent;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-bottom: 7px solid #822D6E;
-    content: "";
-    display: none; }
+  position: relative;
+}
+a[data-tooltip]:hover:after {
+  display: block;
+}
+a[data-tooltip]:hover:before {
+  display: block;
+}
+a[data-tooltip]:before {
+  position: absolute;
+  left: 20px;
+  top: calc(100% + 7px);
+  background-color: #822D6E;
+  color: #FFF;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 5px;
+  padding: 0 10px;
+  content: attr(data-tooltip);
+  white-space: nowrap;
+  font-size: 15px;
+  font-weight: normal;
+  display: none;
+  box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75);
+}
+a[data-tooltip]:after {
+  position: absolute;
+  left: 30px;
+  top: calc(100% - 7px);
+  border-top: 7px solid transparent;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #822D6E;
+  content: "";
+  display: none;
+}
 
 div.dropdown {
   width: 100%;
@@ -91,288 +121,391 @@ div.dropdown {
   position: relative;
   border-radius: 5px;
   cursor: pointer;
-  z-index: 200; }
-  div.dropdown.expanded {
-    border-radius: 5px 5px 0px 0px; }
-    div.dropdown.expanded .toggle {
-      border-radius: 0 5px 0px 0px; }
-  div.dropdown .toggle {
-    width: 30px;
-    height: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 0 5px 5px 0;
-    z-index: 10;
-    transition: all 0.3s linear;
-    background: #822D6E; }
-    div.dropdown .toggle:hover {
-      background: #682458; }
-      div.dropdown .toggle:hover:after {
-        border-top-color: #FFF; }
-    div.dropdown .toggle:after {
-      content: "";
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 7px 7px 0 7px;
-      border-color: #CCC transparent transparent transparent;
-      position: absolute;
-      top: 13px;
-      left: 8px; }
-  div.dropdown .dropdown-container {
-    width: 100%;
-    display: none;
-    background: #822D6E;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    border-radius: 0 0 5px 5px;
-    overflow: hidden; }
-    div.dropdown .dropdown-container a {
-      width: 100%;
-      height: 30px;
-      padding: 6px 0 0 16px;
-      font-size: 15px;
-      display: block;
-      box-sizing: border-box;
-      color: #CCC;
-      transition: all 0.3s linear; }
-      div.dropdown .dropdown-container a:hover {
-        background: #682458;
-        color: #FFF; }
-  div.dropdown .selected-item {
-    width: calc( 100% - 30px );
-    height: 100%;
-    padding: 7px 0 0 9px;
-    color: #3d3d3d;
-    font-size: 15px;
-    display: block;
-    box-sizing: border-box; }
+  z-index: 200;
+}
+div.dropdown.expanded {
+  border-radius: 5px 5px 0px 0px;
+}
+div.dropdown.expanded .toggle {
+  border-radius: 0 5px 0px 0px;
+}
+div.dropdown .toggle {
+  width: 30px;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0 5px 5px 0;
+  z-index: 10;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+  background: #822D6E;
+}
+div.dropdown .toggle:hover {
+  background: #682458;
+}
+div.dropdown .toggle:hover:after {
+  border-top-color: #FFF;
+}
+div.dropdown .toggle:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7px 7px 0 7px;
+  border-color: #CCC transparent transparent transparent;
+  position: absolute;
+  top: 13px;
+  left: 8px;
+}
+div.dropdown .dropdown-container {
+  width: 100%;
+  display: none;
+  background: #822D6E;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  border-radius: 0 0 5px 5px;
+  overflow: hidden;
+}
+div.dropdown .dropdown-container a {
+  width: 100%;
+  height: 30px;
+  padding: 6px 0 0 16px;
+  font-size: 15px;
+  display: block;
+  box-sizing: border-box;
+  color: #CCC;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+div.dropdown .dropdown-container a:hover {
+  background: #682458;
+  color: #FFF;
+}
+div.dropdown .selected-item {
+  width: calc( 100% - 30px );
+  height: 100%;
+  padding: 7px 0 0 9px;
+  color: #3d3d3d;
+  font-size: 15px;
+  display: block;
+  box-sizing: border-box;
+}
 
 .login-area {
   width: 100%;
   height: 100%;
   display: inline-block;
   background: url(../img/bg.jpg);
-  background-size: 100%; }
-  .login-area .login {
-    width: 400px;
-    margin: 300px auto 0 auto;
-    padding: 20px;
-    display: block;
-    border-radius: 20px;
-    background: rgba(255, 255, 255, 0.3); }
-    .login-area .login form#login label {
-      width: 100%;
-      font-size: 18px;
-      font-weight: bold;
-      color: #49193E; }
-    .login-area .login form#login hr {
-      margin: 10px 0 10px 0;
-      border-color: #49193E; }
-    .login-area .login form#login input {
-      width: 100%;
-      height: 40px;
-      margin-bottom: 20px;
-      padding: 10px;
-      border: none;
-      box-sizing: border-box;
-      border-radius: 10px;
-      color: #2d2d2d;
-      outline: none;
-      background: #CCC; }
-      .login-area .login form#login input:focus {
-        background: #FFF; }
-      .login-area .login form#login input[type='submit'] {
-        margin: 0;
-        background: #822D6E;
-        color: #CCC;
-        font-weight: bold; }
-        .login-area .login form#login input[type='submit']:hover {
-          border-color: #682458;
-          background: #682458; }
-        .login-area .login form#login input[type='submit']:focus {
-          color: #FFF; }
+  background-size: 100%;
+}
+.login-area .login {
+  width: 400px;
+  margin: 300px auto 0 auto;
+  padding: 20px;
+  display: block;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.3);
+}
+.login-area .login form#login label {
+  width: 100%;
+  font-size: 18px;
+  font-weight: bold;
+  color: #49193E;
+}
+.login-area .login form#login hr {
+  margin: 10px 0 10px 0;
+  border-color: #49193E;
+}
+.login-area .login form#login input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: none;
+  box-sizing: border-box;
+  border-radius: 10px;
+  color: #2d2d2d;
+  outline: none;
+  background: #CCC;
+}
+.login-area .login form#login input:focus {
+  background: #FFF;
+}
+.login-area .login form#login input[type='submit'] {
+  margin: 0;
+  background: #822D6E;
+  color: #CCC;
+  font-weight: bold;
+}
+.login-area .login form#login input[type='submit']:hover {
+  border-color: #682458;
+  background: #682458;
+}
+.login-area .login form#login input[type='submit']:focus {
+  color: #FFF;
+}
 
 .webapp {
   width: 100%;
   height: 100%;
-  box-sizing: border-box; }
-  .webapp .top-bar {
-    width: 100%;
-    height: 50px;
-    float: right;
-    box-sizing: border-box;
-    background: #FFF;
-    color: #822D6E;
-    box-shadow: 0px 7px 17px -5px rgba(0, 0, 0, 0.75);
-    position: relative;
-    z-index: 200; }
-    .webapp .top-bar .top-dropdown-container {
-      width: 240px;
-      height: 100%;
-      padding: 10px;
-      background: #FFF;
-      box-sizing: border-box;
-      cursor: pointer;
-      float: left; }
-      .webapp .top-bar .top-dropdown-container:hover {
-        background: #DDD; }
-    .webapp .top-bar .top-bar-container {
-      width: auto;
-      height: 100%;
-      padding: 10px;
-      background: #FFF;
-      box-sizing: border-box; }
-      .webapp .top-bar .top-bar-container:hover {
-        background: #DDD; }
-    .webapp .top-bar .username {
-      margin-top: 5px;
-      display: block;
-      font-weight: bold;
-      color: #822D6E; }
-    .webapp .top-bar .add {
-      font-size: 30px;
-      padding: 0;
-      line-height: 50px; }
-    .webapp .top-bar .logout {
-      padding: 0 10px 0 10px;
-      line-height: 50px;
-      font-size: 15px; }
-    .webapp .top-bar .top-bar-item {
-      min-width: 50px;
-      height: 100%;
-      border-radius: 0;
-      text-align: center; }
-  .webapp .side-bar {
-    width: 200px;
-    height: calc(100% - 50px);
-    box-sizing: border-box;
-    background: #FFF;
-    box-shadow: 7px 0px 17px -5px rgba(0, 0, 0, 0.75);
-    position: relative;
-    z-index: 100; }
-    .webapp .side-bar .overview-item {
-      width: 100%;
-      height: 50px;
-      padding: 10px;
-      background: #FFF;
-      box-sizing: border-box;
-      cursor: pointer; }
-      .webapp .side-bar .overview-item:hover {
-        background: #DDD; }
-      .webapp .side-bar .overview-item .title {
-        width: 100%;
-        display: block;
-        font-size: 13px;
-        font-weight: bold;
-        color: #822D6E; }
-      .webapp .side-bar .overview-item .date {
-        width: 100%;
-        margin-top: 5px;
-        display: block;
-        font-size: 13px;
-        text-align: right;
-        color: #822D6E; }
-      .webapp .side-bar .overview-item hr {
-        width: 80%;
-        margin: 5px auto 0 auto;
-        display: block;
-        position: relative;
-        bottom: 0;
-        border: none;
-        border-top: 1px solid #DDD; }
-  .webapp .details-pane {
-    width: calc(100% - 200px);
-    height: calc(100% - 50px);
-    padding: 20px;
-    box-sizing: border-box;
-    background: #CCC; }
-  .webapp .button {
-    width: auto;
-    height: 30px;
-    padding: 5px 8px;
-    display: block;
-    border-radius: 5px;
-    box-sizing: border-box;
-    background: #822D6E;
-    color: #CCC;
-    font-weight: bold;
-    transition: background 0.3s, color 0.3s; }
-    .webapp .button.bright {
-      background: #FFF;
-      color: #822D6E; }
-      .webapp .button.bright:hover {
-        background: #DDD; }
-    .webapp .button:hover {
-      background: #682458; }
-  .webapp .inner {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    display: block;
-    background: #FFF;
-    box-sizing: border-box;
-    box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75);
-    overflow-y: auto;
-    border-radius: 10px; }
-    .webapp .inner h1 {
-      margin: 0;
-      font-size: 30px;
-      font-weight: bold;
-      color: #822D6E; }
-    .webapp .inner form input[type="text"] {
-      width: 100%;
-      height: 40px;
-      margin-top: 20px;
-      font-size: 18px;
-      color: #2d2d2d;
-      padding-left: 8px;
-      border: 1px solid #DDD;
-      box-sizing: border-box;
-      border-radius: 10px;
-      background: #DDD;
-      transition: all 0.3s linear; }
-      .webapp .inner form input[type="text"]:focus {
-        border: 1px solid #822D6E;
-        background: #FFF; }
-    .webapp .inner form input[type="submit"], .webapp .inner form input[type="button"] {
-      width: auto;
-      height: 40px;
-      margin-top: 20px;
-      margin-right: 5px;
-      padding: 0 15px 0 15px;
-      font-size: 15px;
-      color: #CCC;
-      background: #822D6E;
-      box-sizing: border-box;
-      border-radius: 10px;
-      border: none;
-      font-weight: bold;
-      transition: all 0.3s linear; }
-      .webapp .inner form input[type="submit"]:focus, .webapp .inner form input[type="button"]:focus {
-        background: #682458;
-        color: #FFF; }
-      .webapp .inner form input[type="submit"]:hover, .webapp .inner form input[type="button"]:hover {
-        background: #682458;
-        color: #FFF; }
-    .webapp .inner form textarea {
-      width: 100%;
-      height: 150px;
-      max-width: 100%;
-      margin-top: 20px;
-      font-size: 18px;
-      color: #2d2d2d;
-      padding: 8px;
-      border: 1px solid #DDD;
-      box-sizing: border-box;
-      border-radius: 10px;
-      background: #DDD;
-      transition: all 0.3s linear; }
-      .webapp .inner form textarea:focus {
-        border: 1px solid #822D6E;
-        background: #FFF; }
+  box-sizing: border-box;
+}
+.webapp .top-bar {
+  width: 100%;
+  height: 50px;
+  float: right;
+  box-sizing: border-box;
+  background: #FFF;
+  color: #822D6E;
+  box-shadow: 0px 7px 17px -5px rgba(0, 0, 0, 0.75);
+  position: relative;
+  z-index: 200;
+}
+.webapp .top-bar .top-dropdown-container {
+  width: 250px;
+  height: 100%;
+  padding: 10px;
+  background: #FFF;
+  box-sizing: border-box;
+  cursor: pointer;
+  float: left;
+  border-right: 10px solid #822D6E;
+}
+.webapp .top-bar .top-dropdown-container:hover {
+  background: #DDD;
+}
+.webapp .top-bar .top-bar-container {
+  width: auto;
+  height: 100%;
+  padding: 10px;
+  background: #FFF;
+  box-sizing: border-box;
+}
+.webapp .top-bar .top-bar-container:hover {
+  background: #DDD;
+}
+.webapp .top-bar .username {
+  margin-top: 5px;
+  display: block;
+  font-weight: bold;
+  color: #822D6E;
+}
+.webapp .top-bar .add {
+  font-size: 30px;
+  padding: 0;
+  line-height: 50px;
+}
+.webapp .top-bar .logout {
+  padding: 0 10px 0 10px;
+  line-height: 50px;
+  font-size: 15px;
+}
+.webapp .top-bar .top-bar-item {
+  min-width: 50px;
+  height: 100%;
+  border-radius: 0;
+  text-align: center;
+}
+.webapp .side-bar {
+  width: 200px;
+  height: calc(100% - 50px);
+  box-sizing: border-box;
+  background: #FFF;
+  box-shadow: 7px 0px 17px -5px rgba(0, 0, 0, 0.75);
+  position: relative;
+  z-index: 100;
+}
+.webapp .side-bar .overview-item {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  background: #FFF;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.webapp .side-bar .overview-item:hover {
+  background: #DDD;
+}
+.webapp .side-bar .overview-item .title {
+  width: 100%;
+  display: block;
+  font-size: 13px;
+  font-weight: bold;
+  color: #822D6E;
+}
+.webapp .side-bar .overview-item .date {
+  width: 100%;
+  margin-top: 5px;
+  display: block;
+  font-size: 13px;
+  text-align: right;
+  color: #822D6E;
+}
+.webapp .side-bar .overview-item hr {
+  width: 80%;
+  margin: 5px auto 0 auto;
+  display: block;
+  position: relative;
+  bottom: 0;
+  border: none;
+  border-top: 1px solid #DDD;
+}
+.webapp .details-pane {
+  width: calc(100% - 200px);
+  height: calc(100% - 50px);
+  padding: 20px;
+  box-sizing: border-box;
+  background: #CCC;
+}
+.webapp .button {
+  width: auto;
+  height: 30px;
+  padding: 5px 8px;
+  display: block;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background: #822D6E;
+  color: #CCC;
+  font-weight: bold;
+  -webkit-transition: background 0.3s, color 0.3s;
+          transition: background 0.3s, color 0.3s;
+}
+.webapp .button.bright {
+  background: #FFF;
+  color: #822D6E;
+}
+.webapp .button.bright:hover {
+  background: #DDD;
+}
+.webapp .button:hover {
+  background: #682458;
+}
+.webapp .inner {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: block;
+  background: #FFF;
+  box-sizing: border-box;
+  box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75);
+  overflow-y: auto;
+  border-radius: 10px;
+}
+.webapp .inner h1 {
+  margin: 0;
+  font-size: 30px;
+  font-weight: bold;
+  color: #822D6E;
+}
+.webapp .inner form input[type="text"] {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #2d2d2d;
+  padding-left: 8px;
+  border: 1px solid #DDD;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #DDD;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+.webapp .inner form input[type="text"]:focus {
+  border: 1px solid #822D6E;
+  background: #FFF;
+}
+.webapp .inner form input[type="submit"], .webapp .inner form input[type="button"] {
+  width: auto;
+  height: 40px;
+  margin-top: 20px;
+  margin-right: 5px;
+  padding: 0 15px 0 15px;
+  font-size: 15px;
+  color: #CCC;
+  background: #822D6E;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+.webapp .inner form input[type="submit"]:focus, .webapp .inner form input[type="button"]:focus {
+  background: #682458;
+  color: #FFF;
+}
+.webapp .inner form input[type="submit"]:hover, .webapp .inner form input[type="button"]:hover {
+  background: #682458;
+  color: #FFF;
+}
+.webapp .inner form textarea {
+  width: 100%;
+  height: 150px;
+  max-width: 100%;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #2d2d2d;
+  padding: 8px;
+  border: 1px solid #DDD;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #DDD;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+.webapp .inner form textarea:focus {
+  border: 1px solid #822D6E;
+  background: #FFF;
+}
 
-/*# sourceMappingURL=main.css.map */
+.overlay {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.8);
+  display: none;
+  cursor: pointer;
+  z-index: 9999;
+}
+.overlay .dialog {
+  width: 600px;
+  height: auto;
+  margin: 300px auto 0 auto;
+  padding: 10px;
+  display: block;
+  background: #822D6E;
+  border-radius: 10px;
+}
+.overlay p {
+  display: block;
+  margin: 20px 0 20px 0;
+  color: #CCC;
+  font-size: 18px;
+}
+.overlay a.button {
+  width: calc(50% - 5px);
+  height: 40px;
+  padding: 0;
+  display: inline-block;
+  float: left;
+  background: #DDD;
+  color: #822D6E;
+  font-size: 15px;
+  box-sizing: border-box;
+  line-height: 40px;
+  text-align: center;
+}
+.overlay a.button.ok {
+  margin-right: 10px;
+}
+.overlay a.button:hover {
+  background: #FFF;
+  color: #682458;
+}
