--- a/scss/imports/_global.scss
+++ b/scss/imports/_global.scss
@@ -50,3 +50,8 @@ hr.broad{
 .width-100{width: 50% !important;}
 .width-33{width: 33.33333% !important;}
 .width-20{width: 20% !important;}
+
+.clearer{
+	clear: both;
+	float: none;
+}
