--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,8 @@ div.dropdown .selected-item {
   padding: 20px;
   display: block;
   border-radius: 20px;
-  background: rgba(255, 255, 255, 0.3);
+  background: #FFF;
+  box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.75);
 }
 .login-area .login form#login label {
   width: 100%;
@@ -222,30 +223,34 @@ div.dropdown .selected-item {
 .login-area .login form#login input {
   width: 100%;
   height: 40px;
+  margin-top: 0;
   margin-bottom: 20px;
   padding: 10px;
   border: none;
   box-sizing: border-box;
   border-radius: 10px;
-  color: #2d2d2d;
+  color: #2D2D2D;
   outline: none;
-  background: #CCC;
+  background: #CCCCCC;
 }
 .login-area .login form#login input:focus {
-  background: #FFF;
+  background: #FFFFFF;
+  border: 1px solid #822D6E;
 }
 .login-area .login form#login input[type='submit'] {
   margin: 0;
   background: #822D6E;
-  color: #CCC;
+  color: #CCCCCC;
   font-weight: bold;
 }
 .login-area .login form#login input[type='submit']:hover {
   border-color: #682458;
   background: #682458;
+  color: #FFF;
 }
 .login-area .login form#login input[type='submit']:focus {
   color: #FFF;
+  background: #682458;
 }
 
 .webapp {
@@ -390,7 +395,7 @@ div.dropdown .selected-item {
   display: block;
   background: #FFF;
   box-sizing: border-box;
-  box-shadow: 7px 7px 17px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.75);
   overflow-y: auto;
   border-radius: 10px;
 }
@@ -399,67 +404,6 @@ div.dropdown .selected-item {
   font-size: 30px;
   font-weight: bold;
   color: #822D6E;
-}
-.webapp .inner form input[type="text"] {
-  width: 100%;
-  height: 40px;
-  margin-top: 20px;
-  font-size: 18px;
-  color: #2d2d2d;
-  padding-left: 8px;
-  border: 1px solid #DDD;
-  box-sizing: border-box;
-  border-radius: 10px;
-  background: #DDD;
-  -webkit-transition: all 0.3s linear;
-          transition: all 0.3s linear;
-}
-.webapp .inner form input[type="text"]:focus {
-  border: 1px solid #822D6E;
-  background: #FFF;
-}
-.webapp .inner form input[type="submit"], .webapp .inner form input[type="button"] {
-  width: auto;
-  height: 40px;
-  margin-top: 20px;
-  margin-right: 5px;
-  padding: 0 15px 0 15px;
-  font-size: 15px;
-  color: #CCC;
-  background: #822D6E;
-  box-sizing: border-box;
-  border-radius: 10px;
-  border: none;
-  font-weight: bold;
-  -webkit-transition: all 0.3s linear;
-          transition: all 0.3s linear;
-}
-.webapp .inner form input[type="submit"]:focus, .webapp .inner form input[type="button"]:focus {
-  background: #682458;
-  color: #FFF;
-}
-.webapp .inner form input[type="submit"]:hover, .webapp .inner form input[type="button"]:hover {
-  background: #682458;
-  color: #FFF;
-}
-.webapp .inner form textarea {
-  width: 100%;
-  height: 150px;
-  max-width: 100%;
-  margin-top: 20px;
-  font-size: 18px;
-  color: #2d2d2d;
-  padding: 8px;
-  border: 1px solid #DDD;
-  box-sizing: border-box;
-  border-radius: 10px;
-  background: #DDD;
-  -webkit-transition: all 0.3s linear;
-          transition: all 0.3s linear;
-}
-.webapp .inner form textarea:focus {
-  border: 1px solid #822D6E;
-  background: #FFF;
 }
 
 .overlay {
@@ -508,4 +452,66 @@ div.dropdown .selected-item {
 .overlay a.button:hover {
   background: #FFF;
   color: #682458;
+}
+
+form input[type="text"], form input[type="password"] {
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #2d2d2d;
+  padding-left: 8px;
+  border: 1px solid #DDD;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #DDD;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+form input[type="text"]:focus, form input[type="password"]:focus {
+  border: 1px solid #822D6E;
+  background: #FFF;
+}
+form input[type="submit"], form input[type="button"] {
+  width: auto;
+  height: 40px;
+  margin-top: 20px;
+  margin-right: 5px;
+  padding: 0 15px 0 15px;
+  font-size: 15px;
+  color: #CCC;
+  background: #822D6E;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+form input[type="submit"]:focus, form input[type="button"]:focus {
+  background: #682458;
+  color: #FFF;
+}
+form input[type="submit"]:hover, form input[type="button"]:hover {
+  background: #682458;
+  color: #FFF;
+}
+form textarea {
+  width: 100%;
+  height: 150px;
+  max-width: 100%;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #2d2d2d;
+  padding: 8px;
+  border: 1px solid #DDD;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #DDD;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+form textarea:focus {
+  border: 1px solid #822D6E;
+  background: #FFF;
 }
