removed index.html

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -16,7 +16,7 @@
 					<hr />
 					<input type="text" placeholder="Benutzername" />
 					<input type="password" placeholder="Kennwort" />
-					<input type="submit" />
+					<input type="submit" class="button" value="Anmelden"/>
 				</form>
 			</div>
 		</div>
