--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,5 +3,6 @@
 @import 'imports/_global';
 @import 'imports/_tooltips';
 @import 'imports/_dropdown';
+@import 'imports/_filepicker';
 @import 'imports/_login';
 @import 'imports/_webapp';
