--- a/scss/imports/_colors.scss
+++ b/scss/imports/_colors.scss
@@ -7,7 +7,7 @@ $main-font-color: #49193E;
 	$darker-font-color: #822D6E;
 	$dropdown-selected-font-color: #3d3d3d;
 
-$selected-color: #e542a3;
+$selected-color: #993578;
 
 $container-color: rgba(255, 255, 255, 0.3);
 
