--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,12 @@
 
 *::-moz-selection {
   background: #993578;
-  color: #FFF;
+  color: #FFFFFF;
 }
 
 *::selection {
   background: #993578;
-  color: #FFF;
+  color: #FFFFFF;
 }
 
 html, body {
@@ -87,7 +87,7 @@ hr.broad {
           transition: all 0.3s linear;
 }
 .button.bright {
-  background: #FFF;
+  background: #FFFFFF;
   color: #822D6E;
 }
 .button.bright:hover {
@@ -401,7 +401,7 @@ div.dropdown .selected-item {
   height: calc(100% - 50px);
   padding: 20px;
   box-sizing: border-box;
-  background: #CCC;
+  background: #CCCCCC;
 }
 .webapp .details-pane .filepicker {
   width: calc(50% - 20px);
@@ -415,7 +415,7 @@ div.dropdown .selected-item {
   display: block;
   background: #FFF;
   box-sizing: border-box;
-  box-shadow: 0px 0px 40px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
   overflow-y: auto;
   border-radius: 10px;
 }
@@ -446,6 +446,7 @@ div.dropdown .selected-item {
   display: block;
   background: #822D6E;
   border-radius: 10px;
+  box-shadow: 0px 3px 11px 1px rgba(0, 0, 0, 0.75);
 }
 .overlay p {
   display: block;
