--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,7 @@
 @import 'imports/colors';
 @import 'imports/global';
 @import 'imports/login';
+@font-face { font-family: 'street-fighter';
+  src: url('../css/fonts/streetfighter.ttf') format('truetype'); }
+@font-face { font-family: 'black-tiger';
+  src: url('../css/fonts/black_tiger.ttf') format('truetype'); }
