--- a/css/jquery.datetimepicker.css
+++ b/css/jquery.datetimepicker.css
@@ -15,8 +15,8 @@
     -moz-box-sizing : border-box;
     box-sizing      : border-box;
     display         : none;
-    top             : 600px;
-    left            : 400px;
+    top             : calc(50% - 125px);
+    left            : calc(50% - 260px);
     box-shadow      : 0px 3px 11px 1px rgba(0, 0, 0, 0.75);
     border-radius   : 10px;
     overflow        : hidden;
@@ -137,9 +137,23 @@
 }
 
 .xdsoft_datetimepicker .xdsoft_today_button{
-    float               : left;
-    background-position : -70px 0;
-    margin-left         : 5px;
+    width       : 50px !important;
+    height      : 15px;
+    display     : block;
+    float       : left;
+    margin-left : 5px;
+    position    : relative;
+    background  : none;
+}
+
+.xdsoft_datetimepicker .xdsoft_today_button:after{
+    content     : "Heute";
+    color       : #FFFFFF;
+    font-weight : bold;
+    position    : absolute;
+    top         : 7px;
+    left        : -50px;
+    font-size   : 15px;
 }
 
 .xdsoft_datetimepicker .xdsoft_next{
